fix to profile layout on mobile

--- a/app/output.css
+++ b/app/output.css
@@ -3013,6 +3013,14 @@ video {
   padding-top: 1px;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
 .text-left {
   text-align: left;
 }
